# simpit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build_all.bat  build_control.bat  build_ortho_agent.bat  build_slave.bat  launch_control.py  launch_control.py.py  launch_ortho_agent.py  launch_slave.py  pyproject.toml  simpit-control-installer.iss  simpit-control.spec  simpit-ortho-agent.spec  simpit-refactor-handoff.md  simpit-slave.spec
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DUMMY_SCENERY.md  ORTHO_AGENT.md  SECURITY.md  SLAVE_SERVICE.md
simpit_common/: __init__.py  ortho_config.py  platform.py  probes.py  protocol.py  security.py  tilemath.py  xp_rref.py
simpit_control/: __init__.py  __main__.py  data.py  mock_slave.py  ortho_config.py  poller.py  registry.py  slave_link.py
simpit_control/scripts/: backup_xplane.py  block_xplane_updates.py  disable_custom_scenery.bat  disable_custom_scenery.sh  enable_custom_scenery.bat  enable_custom_scenery.sh  launch_xplane.bat  launch_xplane.py  launch_xplane.sh  make_dummy_scenery.py  pilotedge_connect.py  pilotedge_disconnect.py  quit_xplane.py  restore_xplane.py  restore_xplane_updates.py  set_scenery_profile.py  setup_xplane_task.bat  setup_xplane_task.py
simpit_control/ui/: __init__.py  app.py  controller.py  net_utils.py  theme.py  viewmodels.py
simpit_control/ui/dialogs/: __init__.py  batfile_dialog.py  ortho_dialog.py  security_setup.py  slave_dialog.py
simpit_control/ui/widgets/: __init__.py  batfile_list.py  log_panel.py  slave_card.py  tooltip.py
simpit_ortho_agent/: __init__.py  __main__.py  atlas_index.py  engine.py  keepset.py  mount.py  primer.py  rref.py
simpit_slave/: __init__.py  __main__.py  _bundle_hints.py  agent.py  data.py  executor.py  inspector.py
tests/: conftest.py
tests/common/: test_ortho_config.py  test_platform.py  test_probes.py  test_protocol.py  test_security.py  test_tilemath.py  test_xp_rref.py
tests/control/: test_data.py  test_make_dummy_scenery.py  test_mock_slave.py  test_ortho_config.py  test_poller.py  test_registry.py  test_slave_link.py
tests/integration/: test_end_to_end.py
tests/live/: conftest.py  ortho_checks.py  test_ortho_chain.py  verify_live.py
tests/ortho_agent/: conftest.py  test_atlas_index.py  test_engine.py  test_keepset.py  test_mount.py  test_primer.py  test_rref.py
tests/slave/: test_agent.py  test_data.py  test_executor.py  test_inspector.py
tests/ui/: conftest.py  test_app.py  test_controller.py  test_slave_dialog.py  test_viewmodels.py  test_widgets.py
tools/: launch_xplane.bat  ortho_mount.bat
